2002-10-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/midi.c (midi_error): take two arguments.

	* Merge 1.6.5 changes:
	
2002-10-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/grob-description.scm (minimum-beam-collision-distance): 0.75
	staff-space.  Previous 1.5 was probably meant as half-spaces.
	(cautionary-style): parentheses (was: smaller).  This is what doco
	says, and it seems more logical.

	* Documentation/user/refman.itely (Chromatic alterations): Bugfix
	for 2nd sentence.

2002-10-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* make/lilypond.redhat.spec.in: various fixes for RedHat 8.0

2002-10-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (rest_collision_callback): Fixed: partial rewrite.

2002-09-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (make_pixmap): don't produce empty pages.

2002-09-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/translator-property-description.scm (voltaOnThisStaff): add
	property.

2002-09-28  Werner Lemberg  <wl@gnu.org>

	* scm/tex.scm (header-end): Suppress page numbering.

	* scripts/lilypond-book.py (output_dict) <output-texi-quoted>:
	Fix quotation for HTML output.

2002-09-28   Graham Percival   <gperciva@sfu.ca>
	
	* Documentation/user/refman.itely: grammar and phrasing
	  fixes to "Note Entry" section.  Also adds a few new examples.

2002-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* flower/include/string-data.icc: include string.h

2002-09-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/chord-name.scm (chord::inner-name-banter): remove space.

2002-09-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/GNUmakefile (extra-local-help): Add.

	* stepmake/stepmake/www-targets.make (local-help): Add.

2002-09-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/topdocs/INSTALL.texi (Top): recommend binary
	packages.

	* Documentation/topdocs/README.texi (Top): building documentation
	(not website.)

2002-09-26  Jan Nieuwenhuizen  <janneke@gnu.org>
